--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,72 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>RoboAdminConsole</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>iWealth</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <style type="text/css">
+        .loader-overlay,
+        .loading {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0
+        }
+
+        .loading {
+            display: flex;
+            visibility: visible;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            z-index: 999;
+            -webkit-transition: visibility .2s;
+            transition: visibility .2s
+        }
+
+        .hide,
+        .hideLoading {
+            display: none
+        }
+
+        .loader-overlay {
+            position: absolute;
+            background: rgba(241, 241, 241, .9)
+        }
+
+        .loader-content {
+            z-index: 9999;
+            text-align: center
+        }
+
+        .hideLoading {
+            visibility: hidden
+        }
+
+        .loader-content .loader-txt {
+            text-align: center;
+            font-size: 16px;
+            margin-top: 5vh
+        }
+
+        .loader-content img {
+            width: 50px
+        }
+    </style>
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="container-fluid">
+    <app-root>
+        <div id="loader" class="loading">
+            <div class="loader-overlay"> </div>
+            <div class="loader-content"> <img src="assets/ring-alt.gif">
+                <div class="loader-txt">Loading...</div>
+            </div>
+        </div>
+    </app-root>
 </body>
+
 </html>
